--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Introduction to D3.js</title>
+        <style>
+            #graph {
+                border: 1px solid #cecece;
+                width: 100%;
+                height: 300px;
+            }
+        </style>
     </head>
     <body>
         <svg id="graph"></svg>
