--- a/src/3-transition/index.html
+++ b/src/3-transition/index.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Introduction to D3.js</title>
+        <style>
+            #graph {
+                border: 1px solid #cecece;
+                width: 100%;
+                height: 300px;
+            }
+        </style>
     </head>
     <body>
         <nav>
@@ -18,6 +25,11 @@
                 </li>
             </ol>
         </nav>
-        <script type="module" src="main.ts"></script>
+        <h1>Transition</h1>
+
+        <button id="add-btn">Add more entries</button>
+        <button id="remove-btn">Remove entry</button>
+        <svg id="graph"></svg>
+        <script type="module" src="index.ts"></script>
     </body>
 </html>
